Enhance documentation and clean up code in core classes